Responsive Design done!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <figure class="box1">
                 <img src="img/image1.jpg" alt="">
                 <div>
-                    <p>Image 1</p></div>
+                    Image 1</div>
             </figure>
             <figure class="box1">
                 <img src="img/image2.jpeg" alt="">
